nav section added

--- a/index.html
+++ b/index.html
@@ -20,3 +20,30 @@
         }
     </style>
 </head>
+<body class="bg-green-50">
+
+    <!-- 1. NAVBAR -->
+    <header class="bg-white shadow-sm sticky top-0 z-50">
+        <nav class="w-full flex justify-between items-center p-4 px-8">
+       
+            <div class="flex items-center gap-3">
+                <img src="images/logo.png" alt="Logo" class="h-10 w-10">
+                <span class="font-bold text-xl text-gray-800">Emergency Service</span>
+            </div>
+            
+            <div class="flex items-center gap-3">
+                <div class="bg-red-50 text-red-500 rounded-full px-4 py-2 flex items-center gap-2">
+                    <span id="heart-count" class="font-bold">0</span>
+                    <img src="images/heart.png" alt="Heart" class="w-6 h-6">
+                </div>
+                <div class="bg-yellow-50 text-yellow-600 rounded-full px-4 py-2 flex items-center gap-2">
+                    <span id="coin-count" class="font-bold">100</span>
+                    <img src="images/coin.png" alt="Coin" class="w-6 h-6">
+                </div>
+                <div class="bg-emerald-500 text-white rounded-full px-4 py-2 flex items-center gap-2">
+                    <span id="copy-count" class="font-bold">0</span>
+                    <span>Copy</span>
+                </div>
+            </div>
+        </nav>
+    </header>
