hero section added

--- a/index.html
+++ b/index.html
@@ -47,3 +47,13 @@
             </div>
         </nav>
     </header>
+     <!-- 2. CORRECTED HERO SECTION -->
+    <section class="bg-emerald-800 text-white py-12 px-4 text-center">
+        <div class="w-full">
+            <img src="images/logo.png" alt="Emblem" class="mx-auto h-20 mb-4">
+            <h1 class="text-4xl font-bold mb-2">Emergency Service Directory</h1>
+            <p class="text-sm max-w-2xl mx-auto">
+                Government Emergency Services at Your Fingertip - A Project by Government of the People's Republic of Bangladesh
+            </p>
+        </div>
+    </section>
