--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
     </header>
-     <!-- 2. CORRECTED HERO SECTION -->
+     <!-- 2.  HERO SECTION -->
     <section class="bg-emerald-800 text-white py-12 px-4 text-center">
         <div class="w-full">
             <img src="images/logo.png" alt="Emblem" class="mx-auto h-20 mb-4">
@@ -57,3 +57,124 @@
             </p>
         </div>
     </section>
+    <!-- 3. Main Content Section -->
+    <section class="main-content w-full p-8 grid grid-cols-1 lg:grid-cols-4 gap-4">
+        <!-- Cards Container -->
+        <div class="cards grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-4 lg:col-span-3">
+            <!-- Card 1: National Emergency -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/emergency.png" alt="Emergency" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">National Emergency Number</h3>
+                <p class="text-2xl font-bold">999</p>
+                <p class="text-sm text-gray-500">All</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 2: Police Helpline -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/police.png" alt="Police" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Police Helpline Number</h3>
+                <p class="text-2xl font-bold">999</p>
+                <p class="text-sm text-gray-500">Police</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 3: Fire Service -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/fire-service.png" alt="Fire Service" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Fire Service Number</h3>
+                <p class="text-2xl font-bold">999</p>
+                <p class="text-sm text-gray-500">Fire</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 4: Ambulance Service -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/ambulance.png" alt="Ambulance" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Ambulance Service</h3>
+                <p class="text-2xl font-bold">1994-999999</p>
+                <p class="text-sm text-gray-500">Health</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 5: Women & Child Helpline -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/brac.png" alt="Brac" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Women & Child Helpline</h3>
+                <p class="text-2xl font-bold">109</p>
+                <p class="text-sm text-gray-500">Help</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 6: Anti-Corruption Helpline -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/logo-dark.png" alt="Logo" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Anti-Corruption Helpline</h3>
+                <p class="text-2xl font-bold">106</p>
+                <p class="text-sm text-gray-500">Govt.</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 7: Electricity Helpline (NEW) -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/emergency.png" alt="Electricity" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Electricity Helpline</h3>
+                <p class="text-2xl font-bold">16216</p>
+                <p class="text-sm text-gray-500">Electricity Outage</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 8: Brac Helpline (NEW) -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/brac.png" alt="Brac" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Brac Helpline</h3>
+                <p class="text-2xl font-bold">16445</p>
+                <p class="text-sm text-gray-500">NGO</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+
+            <!-- Card 9: Bangladesh Railway Helpline (NEW) -->
+            <div class="card bg-white p-4 rounded-xl shadow-md relative">
+                <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
+                <img src="images/Bangladesh-Railway.png" alt="Railway" class="w-10 h-10 mb-2">
+                <h3 class="font-semibold text-lg">Bangladesh Railway Helpline</h3>
+                <p class="text-2xl font-bold">163</p>
+                <p class="text-sm text-gray-500">Travel</p>
+                <div class="flex gap-2 mt-4">
+                    <button class="btn btn-outline flex-1 copy-btn">📋 Copy</button>
+                    <button class="btn btn-success flex-1 call-btn">📞 Call</button>
+                </div>
+            </div>
+        </div>
