--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
 
-            <!-- Card 7: Electricity Helpline (NEW) -->
+            <!-- Card 7: Electricity Helpline  -->
             <div class="card bg-white p-4 rounded-xl shadow-md relative">
                 <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
                 <img src="images/emergency.png" alt="Electricity" class="w-10 h-10 mb-2">
@@ -152,7 +152,7 @@
                 </div>
             </div>
 
-            <!-- Card 8: Brac Helpline (NEW) -->
+            <!-- Card 8: Brac Helpline  -->
             <div class="card bg-white p-4 rounded-xl shadow-md relative">
                 <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
                 <img src="images/brac.png" alt="Brac" class="w-10 h-10 mb-2">
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-            <!-- Card 9: Bangladesh Railway Helpline (NEW) -->
+            <!-- Card 9: Bangladesh Railway Helpline -->
             <div class="card bg-white p-4 rounded-xl shadow-md relative">
                 <div class="absolute top-2 right-2 cursor-pointer text-2xl heart">♡</div>
                 <img src="images/Bangladesh-Railway.png" alt="Railway" class="w-10 h-10 mb-2">
@@ -178,3 +178,14 @@
                 </div>
             </div>
         </div>
+<!-- History Section -->
+        <div class="history bg-white p-4 rounded-xl shadow-md lg:col-span-1">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="font-semibold text-lg">Call History</h2>
+                <button id="clear-history" class="btn btn-success btn-sm">Clear</button>
+            </div>
+            <ul id="history-list" class="space-y-2 text-sm">
+                <!-- History items will be added here -->
+            </ul>
+        </div>
+    </section>
